Черновая верстка главной страницы

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,23 +6,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+  <!-- <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> -->
   <!-- <link rel="stylesheet" href="{% static 'css/daterangepicker.css' %}"> -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
   <title>{% block title %}{% endblock %}</title>
 </head>
 
 <body>
 
-  {% include 'inc/_header.html' %}
-
   {% include 'inc/_navbar.html' %}
 
-  <div class="container">
-    {% block content %}CONTENT{% endblock %}
-  </div>
+  {% block content %}CONTENT{% endblock %}
 
-  <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+  <!-- <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script> -->
+  <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
   <!-- <script src="{% static 'js/jquery.min.js' %}"></script> -->
   <!-- <script src="{% static 'js/moment.min.js' %}"></script> -->
   <!-- <script src="{% static 'js/daterangepicker.js' %}"></script> -->
