--- a/templates/inc/_navbar.html
+++ b/templates/inc/_navbar.html
@@ -1,28 +1,21 @@
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'blogs:home' %}">JustTravel</a>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'blogs:home' %}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'blogs:localities' %}">Населенные пункты</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'rooms:rooms' %}">Жилье</a>
-        </li>
-      </ul>
-      <span class="navbar-text">
-        {% if request.user.is_authenticated %}
-        Добро пожаловать, {{ user.first_name }} | <a href="{% url 'accounts:logout' %}">Выход</a>
-        {% else %}
-        <a href="{% url 'accounts:login' %}">Вход</a> | <a href="{% url 'accounts:register' %}">Регистрация</a>
-        {% endif %}
-      </span>
-      <span class="navbar-text">
-        <a href="{% url 'rooms:create_room' %}">&nbsp;| Сдайте жилье</a>
-      </span>
-    </div>
-  </div>
+<nav id="navBar" class="navbar-white">
+  <a href="{% url 'blogs:home' %}" class="logo">
+    <!-- <img src="images/logo.png" class="logo"> -->
+    JustTravel
+  </a>
+  <ul class="nav-links">
+    <li><a href="{% url 'blogs:localities' %}">Населенные пункты</a></li>
+    <li><a href="{% url 'blogs:places' %}">Интересные места</a></li>
+    <li><a href="{% url 'rooms:rooms' %}">Жилье</a></li>
+  </ul>
+  <ul class='nav-btn'>
+    {% if request.user.is_authenticated %}
+    <li><a href="{% url 'rooms:create_room' %}" class="create_room-btn">Сдайте жилье</a></li>
+    <li><a href="{% url 'accounts:logout' %}" class="logout-btn">Выход</a></li>
+    {% else %}
+    <li><a href="{% url 'accounts:login' %}" class="login-btn">Вход</a></li>
+    <li><a href="{% url 'accounts:register' %}" class="register-btn">Регистрация</a></li>
+    {% endif %}
+    <i class="fa-solid fa-bars" onclick="togglebtn()"></i>
+  </ul>
 </nav>
