--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'css/style_home.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_footer.css' %}">
   <title>JustTravel</title>
 </head>
 
@@ -111,6 +112,7 @@
 
   </div>
 
+  <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
   <script>
     var navBar = document.getElementById("navBar");
     function togglebtn() {
