--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -1,30 +1,130 @@
 {% extends 'base.html' %}
 
+{% block title %}
+{{ room_details.housing_header }}
+{% endblock %}
+
 {% block content %}
 
-<div class="container">
-  <p>
-    {{ room_details.housing_header }}
+
+<div class="house-details">
+  <div class="house-title">
+    <h1>{{ room_details.housing_header }}</h1>
+    <div>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star"></i>
+      <i class="fa-solid fa-star-half-alt"></i>
+      <i class="fa-regular fa-star"></i>
+      <span>245 Просмотров</span>
+      <div>
+        <p>{{ room_details.location }}</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="gallery">
+    {% if room_details.photo1 %}
+    <div class="gallery-img-1"><img src="{{ room_details.photo1.url }}"></div>
+    {% endif %}
+    {% if room_details.photo2 %}
+    <div><img src="{{ room_details.photo2.url }}"></div>
+    {% endif %}
+    {% if room_details.photo3 %}
+    <div><img src="{{ room_details.photo3.url }}"></div>
+    {% endif %}
+    {% if room_details.photo4 %}
+    <div><img src="{{ room_details.photo4.url }}"></div>
+    {% endif %}
+    {% if room_details.photo5 %}
+    <div><img src="{{ room_details.photo5.url }}"></div>
+    {% endif %}
+  </div>
+
+  <div class="small-details">
+    <h2>Entire rental unit hosted by {{ room_details.landlord.get_short_name }}</h2>
+    <p>2 quest &nbsp; &nbsp; 2 beds &nbsp; &nbsp; 1 bathroom</p>
+    <h4>{{ room_details.price }} р / день</h4>
+  </div>
+
+  <hr class="line">
+
+  <form class="check-form">
+    <div>
+      <label>Check-in</label>
+      <input type="text" placeholder="Add date">
+    </div>
+    <div>
+      <label>Check-out</label>
+      <input type="text" placeholder="Add date">
+    </div>
+    <div class="guest-field">
+      <label>Guest</label>
+      <input type="text" placeholder="2 guest">
+    </div>
+    <button type="submit">Check Availability</button>
+  </form>
+
+  <ul class="details-list">
+    <li><i class="fa-solid fa-house-chimney"></i>Entire Home
+      <span>You will have the entire flat for you.</span>
+    </li>
+    <li><i class="fa-solid fa-paintbrush"></i>Enhanced Clean
+      <span>This host has committed to staybnb's cleaning process</span>
+    </li>
+    <li><i class="fa-solid fa-location-dot"></i>Great Location
+      <span>90% of recent guests gave the location a 5 star reting.</span>
+    </li>
+    <li><i class="fa-solid fa-heart"></i>Great Check-in Experience
+      <span>100% of recent guests gave the check-in process a 5 star rating.</span>
+    </li>
+  </ul>
+
+  <hr class="line">
+
+  <p class="home-desc">Guests will be allocated on the ground floor according to availability. You get a
+    comfortable Two bedroom apartment has a true city feeling. The price quoted is for
+    two guest, at the guest slot please mark the number of guests to get the exact price
+    for groups. The Guests will be allocated ground floor according to availability. You
+    get the comfortable two bedroom apartment that has a true city feeling.
   </p>
-  <p>
-    {{ room_details.housing_type }}
-  </p>
-  <p>
-    {{ room_details.photos }}
-  </p>
-  <p>
-    {{ room_details.housing_description }}
-  </p>
-  <p>
-    Удобства: {{ room_details.popular_amenities }}
-  </p>
-  <p>
-    Человеков: {{ room_details.number_of_guests }} шт.
-  </p>
-  <p>
-    Цена за ночь: {{ room_details.price }} р.
-  </p>
+
+  <hr class="line">
+
+  <div class="map">
+    <h3>Location on map</h3>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d548.7258786056058!2d47.03069028642799!3d42.32065588274649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sru!4v1656957836931!5m2!1sru!2sru"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+    <b>San Francisco, California, United States</b>
+    <p>It's like a home away from home.</p>
+  </div>
+
+  <hr class="line">
+
+  <div class="host">
+    <img src="images/host.png">
+    <div>
+      <h2>Hosted by Brandon</h2>
+      <p>
+        <span>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star"></i>
+          <i class="fa-solid fa-star-half-alt"></i>
+        </span>
+        &nbsp; &nbsp; 245 reviews
+        &nbsp; &nbsp; Response rate 100%
+        &nbsp; &nbsp; Response time: 60 min
+      </p>
+    </div>
+  </div>
+  <a href="#" class="contact-host">Contact Host</a>
 </div>
+
 ------------------------------------------------
 <div>
   <form method="post">
@@ -34,6 +134,8 @@
     {% endif %}
     <button type="submit" class="btn btn-primary btn-block">Зарезервировать</button>
   </form>
+</div>
+
 </div>
 
 {% endblock %}
