--- a/rooms/templates/rooms/rooms_list.html
+++ b/rooms/templates/rooms/rooms_list.html
@@ -1,13 +1,106 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
-  {% for item in rooms_list %}
-    <div class="container">
-    <a href="{{ item.get_absolute_url }}">{{ item.housing_header }}</a>
-    <br>
-    {{ item.created_at }}
-    <br>
+
+
+<div class="container">
+  <a href="{{ item.get_absolute_url }}">{{ item.housing_header }}</a>
+  <br>
+  {{ item.created_at }}
+  <br>
+</div>
+<br>
+
+<div class="container">
+
+  <div class="list-container">
+    <div class="left-col">
+      <h1>Рекомендуемое жилье в Гунибском районе</h1>
+      {% for item in rooms_list %}
+      <a href="{{ item.get_absolute_url }}">
+        <div class="house">
+          <div class="house-img">
+            {% if item.photo1 %}
+            <img src="{{ item.photo1.url }}">
+            {% endif %}
+          </div>
+          <div class="house-info">
+            <p>Расположение: {{ item.location }}</p>
+            <h3>{{ item.housing_header }}</h3>
+            <p>1 Bedroom / 1 Bathroom / Wifi / Kitchen</p>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star-half-alt"></i>
+            <i class="fa-regular fa-star"></i>
+            <div class="house-price">
+              <p>{{ item.number_of_guests }} Гость</p>
+              <h4>{{ item.price }} р <span>/ день</span></h4>
+            </div>
+          </div>
+        </div>
+      </a>
+      {% endfor%}
     </div>
-    <br>
-  {% endfor%}
+    <!-- <div class="right-col">
+      <div class="sidebar">
+        <h2>Select Filters</h2>
+        <h3>Property Type</h3>
+        <div class="filter">
+          <input type="checkbox"> <p>House</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Hostel</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Flat</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Villa</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Guest Suite</p> <span>(0)</span>
+        </div>
+        <h3>Amenities</h3>
+        <div class="filter">
+          <input type="checkbox"> <p>Air Conditioning</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Wifi</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Gym</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Pool</p> <span>(0)</span>
+        </div>
+        <div class="filter">
+          <input type="checkbox"> <p>Kitchen</p> <span>(0)</span>
+        </div>
+
+        <div class="sidebar-link">
+          <a href="#">View More</a>
+        </div>
+      </div>
+    </div> -->
+  </div>
+
+  <div class="pagination">
+    <img src="{% static 'images/arrow.png' %}">
+    <span class="current">1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+    <span>&middot; &middot; &middot; &middot;</span>
+    <span>20</span>
+    <img src="{% static 'images/arrow.png' %} " class="right-arrow">
+  </div>
+
+</div>
+
+
+
 {% endblock %}
