--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <!-- <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> -->
   <!-- <link rel="stylesheet" href="{% static 'css/daterangepicker.css' %}"> -->
   <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_locality_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_rooms_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_room_details.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_tooter.css' %}">
