--- a/blogs/templates/blogs/places_list.html
+++ b/blogs/templates/blogs/places_list.html
@@ -1,14 +1,56 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
-  {% for item in places_list %}
-  <div class="container">
-    <a href="{{ item.get_absolute_url }}">{{ item.title }}</a>
-    <br>
-    {{ item.content|truncatewords_html:20|safe }}
-    <br>
-    {{ item.created_at }}
+
+<div class="container">
+  <div class="places-container">
+    <div class="left-col">
+      <h1>Интересные места в Гунибском районе</h1>
+      {% for place in places_list %}
+      <div class="house">
+        <div class="house-img">
+          {% if place %}
+          <img src="{{ place.photo.url }}">
+          {% endif %}
+        </div>
+        <div class="house-info">
+          <h3>{{ place.title }}</h3>
+          <p>{{ place.content|truncatewords_html:50|safe }}</p>
+          <br>
+          <a href="{{ place.get_absolute_url }}">
+            <button type="submit">Читать далее...</button>
+          </a>
+          <div class="house-price">
+            <p>{{ place.created_at|date:"d-m-Y" }}</p>
+          </div>
+        </div>
+      </div>
+      {% endfor%}
+    </div>
+    <!-- <div class="right-col">
+      <div class="sidebar">
+        <h2>Select Filters</h2>
+        <h3>Property Type</h3>
+        <div class="filter">
+          <input type="checkbox">
+          <p>House</p> <span>(0)</span>
+        </div>
+      </div>
+    </div> -->
   </div>
-  <br>
-  {% endfor%}
+
+  <div class="pagination">
+    <img src="{% static 'images/arrow.png' %}">
+    <span class="current">1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+    <span>&middot; &middot; &middot; &middot;</span>
+    <span>20</span>
+    <img src="{% static 'images/arrow.png' %}" class="right-arrow">
+  </div>
+</div>
 {% endblock %}
