--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <!-- <link rel="stylesheet" href="{% static 'css/daterangepicker.css' %}"> -->
   <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_locality_list.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_places_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_rooms_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_room_details.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_tooter.css' %}">
