--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> -->
-  <!-- <link rel="stylesheet" href="{% static 'css/daterangepicker.css' %}"> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_locality_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_places_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_rooms_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_room_details.css' %}">
-  <link rel="stylesheet" href="{% static 'css/style_tooter.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_footer.css' %}">
   <title>{% block title %} JustTravel {% endblock %}</title>
 </head>
 
@@ -25,17 +24,35 @@
 
   {% include 'inc/_footer.html' %}
 
-  <!-- <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script> -->
+  <!-- flatpickr -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script>
+    const value1 = JSON.parse(document.getElementById('value1').textContent);
+    config = {
+      dateFormat: "d.m.Y",
+      minDate: "today",
+      disable: value1
+    }
+    flatpickr("input[type=date_in]", config);
+
+    const value2 = JSON.parse(document.getElementById('value2').textContent);
+    config = {
+      dateFormat: "d.m.Y",
+      minDate: "today",
+      disable: value2
+    }
+    flatpickr("input[type=date_out]", config);
+  </script>
+
+  <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
-  <!-- <script src="{% static 'js/jquery.min.js' %}"></script> -->
-  <!-- <script src="{% static 'js/moment.min.js' %}"></script> -->
-  <!-- <script src="{% static 'js/daterangepicker.js' %}"></script> -->
   <script>
     var navBar = document.getElementById("navBar");
-    function togglebtn(){
+    function togglebtn() {
       navBar.classList.toggle("hidemenu");
     }
   </script>
+
 </body>
 
 </html>
