--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,14 @@
 
   {% include 'inc/_navbar.html' %}
 
+  <div class="container">
+    {% if messages %}
+      {% for message in messages %}
+        {{ message }}
+      {% endfor%}
+    {% endif %}
+  </div>
+
   {% block content %} CONTENT {% endblock %}
 
   {% include 'inc/_footer.html' %}
