--- a/templates/inc/_navbar.html
+++ b/templates/inc/_navbar.html
@@ -7,16 +7,25 @@
     <li><a href="{% url 'blogs:localities' %}">Населенные пункты</a></li>
     <li><a href="{% url 'blogs:places' %}">Интересные места</a></li>
     <li><a href="{% url 'rooms:rooms' %}">Жилье</a></li>
-    <li><a href="{% url 'accounts:account' %}">Личный кабинет</a></li>
+    <!-- <li><a href="{% url 'accounts:account' %}">Личный кабинет</a></li> -->
   </ul>
   <ul class='nav-btn'>
     {% if request.user.is_authenticated %}
-    <li><a href="{% url 'rooms:create_room' %}" class="create_room-btn">Сдайте жилье</a></li>
+    <!-- <li><a href="{% url 'rooms:create_room' %}" class="create_room-btn">Сдайте жилье</a></li> -->
     <li><a href="{% url 'accounts:logout' %}" class="logout-btn">Выход</a></li>
     {% else %}
     <li><a href="{% url 'accounts:login' %}" class="login-btn">Вход</a></li>
     <li><a href="{% url 'accounts:register' %}" class="register-btn">Регистрация</a></li>
     {% endif %}
-    <i class="fa-solid fa-bars" onclick="togglebtn()"></i>
+
+    <div class="dropdown">
+      {% if request.user.is_authenticated %}
+        <i class="fa-solid fa-bars" onclick="myFunction()"></i>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="{% url 'accounts:account' %}">Личный кабинет</a>
+        <a href="{% url 'rooms:create_room' %}">Сдайте жилье</a>
+      </div>
+      {% endif %}
+    </div>
   </ul>
 </nav>
