flatpickr: bugfix с выбором дат.

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'css/flatpickr.min.css' %}">
-  <link rel="stylesheet" href="{% static 'css/flatpickr-theme-airbnb.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="https://npmcdn.com/flatpickr/dist/themes/airbnb.css">
   <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_locality_list.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_places_list.css' %}">
@@ -36,9 +36,9 @@
 
   <script src="{% static 'js/functions.js' %}"></script>
   <!-- flatpickr -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script> -->
-  <script src="{% static 'js/flatpickr.min.js' %}"></script>
-  <script src="{% static 'js/flatpickr-l10n-ru.js' %}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
+  <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
   <script src="{% static 'js/flatpickr-conf.js' %}"></script>
 
   <!-- fontawesome -->
