--- a/accounts/templates/accounts/will_arrive_soon.html
+++ b/accounts/templates/accounts/will_arrive_soon.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 
 
-{% block title %}
-Личный кабинет
-{% endblock %}
 
 {% block content %}
 
@@ -40,5 +37,17 @@
   </ul>
   {% endif %}
 </nav>
+
+
+<div class="container">
+  {% for reserv in will_arrive_soon|dictsort:"start_date" %}
+  {{ reserv.name_reserv }}
+  <br>
+  {{ reserv.start_date }}
+  {{ reserv.end_date }}
+  <br>
+  <br>
+  {% endfor %}
+</div>
 
 {% endblock %}
