--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -100,17 +100,9 @@
         discovered the undoubtable source.</p>
     </div>
 
-    <div class="footer">
-      <a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
-      <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-      <a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
-      <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
-      <hr>
-      <p>Copyright © 2022, JustTravel.</p>
-    </div>
-
   </div>
+
+  {% include 'inc/_footer.html' %}
 
   <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
   <script>
