--- a/blogs/templates/blogs/places_list.html
+++ b/blogs/templates/blogs/places_list.html
@@ -5,21 +5,21 @@
 {% block content %}
 
 <div class="container">
-  <div class="places-container">
-    <div class="left-col">
-      <h1>Интересные места в Гунибском районе</h1>
-      {% for place in places_list %}
-      <div class="house">
-        <div class="house-img">
+  <h1>Интересные места в Гунибском районе</h1>
+  <div class="list-container">
+  {% for place in places_list %}
+    <div class="container-left-col">
+      <div class="object">
+        <div class="object-img">
           {% if place %}
           <img src="{{ place.photo.url }}">
           {% endif %}
         </div>
-        <div class="house-info">
+        <div class="object-info">
           <h3>{{ place.title }}</h3>
           <p>{{ place.content|truncatewords_html:50|safe }}</p>
           <br>
-          <div class="house-price">
+          <div class="object-date">
             <p>{{ place.created_at|date:"d-m-Y" }}</p>
           </div>
           <a href="{{ place.get_absolute_url }}">
@@ -27,18 +27,8 @@
           </a>
         </div>
       </div>
-      {% endfor%}
     </div>
-    <!-- <div class="right-col">
-      <div class="sidebar">
-        <h2>Select Filters</h2>
-        <h3>Property Type</h3>
-        <div class="filter">
-          <input type="checkbox">
-          <p>House</p> <span>(0)</span>
-        </div>
-      </div>
-    </div> -->
+    {% endfor%}
   </div>
 
   <div class="pagination">
