--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -181,9 +181,7 @@
     color: #ff5361;
     font-size: 14px;
 }
-.house-title p{
-    margin-top: 5px;
-}
+
 .gallery {
     display: grid;
     grid-gap: 10px;
@@ -199,6 +197,7 @@
 
 .gallery-img-1 {
     grid-area: first;
+    width: 660px;
 }
 
 .small-details h2 {
@@ -234,14 +233,23 @@
     display: block;
 }
 
-.check-form div {
+/* .check-form div {
     padding: 20px;
-}
+} */
 
 .check-form input {
-    background: transparent;
-    border: 0;
+    border: 1px solid #ff5361;
     outline: none;
+    color: #555;
+    padding: 10px;
+    width: 200px;
+    border-radius: 8px;
+    font-size: 20px;
+    text-align: center;
+    /* margin-right: 100px; */
+}
+.check-form input[type="text"]{
+    margin-right: 120px;
 }
 
 .check-form button {
@@ -250,9 +258,24 @@
     outline: none;
     color: #fff;
     padding: 18px;
-    width: 350px;
+    width: 300px;
     border-radius: 8px;
     font-size: 16px;
+    cursor: pointer;
+}
+
+.flatpickr-day {
+    color: #000;
+    font-weight: 600;
+}
+
+.flatpickr-day.flatpickr-disabled {
+    /* background: #f7a8af; */
+    color: rgb(148, 148, 148);
+    text-decoration: line-through;
+    text-decoration-color: #ff5361;
+    text-decoration-thickness: 1px;
+    font-weight: 400;
 }
 
 .guest-field {
@@ -326,33 +349,22 @@
     font-weight: 500;
 }
 
-.host i {
+/* .host i {
     color: #ff5361;
-}
+} */
 
 .contact-host {
     display: inline-block;
-    margin: 40px 0 40px 120px;
+    /* margin: 40px 0 40px 120px; */
+    margin: 0 10px 0 0;
     text-decoration: none;
     color: #555;
-    padding: 15px 50px;
+    padding: 15px 15px;
     border: 1px solid #ff5361;
     border-radius: 8px;
 }
 
-.flatpickr-input{
-    border: 1px solid #ff5361;
-    outline: none;
-    color: #555;
-    padding: 10px;
-    width: 200px;
-    border-radius: 8px;
-    font-size: 24px;
-    text-align: center;
-    margin-right: 150px;
-}
-
-.btn-reserv{
+.btn-reserv {
     background: #ff5361;
     border: 0;
     outline: none;
@@ -364,20 +376,6 @@
     cursor: pointer;
     margin: 10px;
     margin-left: 100px;
-}
-
-.flatpickr-day{
-    color: #000;
-    font-weight: 500;
-}
-
-.flatpickr-day.flatpickr-disabled{
-    /* background: #f7a8af; */
-    color: gray;
-    text-decoration: line-through;
-    text-decoration-color: #ff5361;
-    text-decoration-thickness: 1px;
-    font-weight: 400;
 }
 
 /* ----------media query for hous details page---------- */
