--- a/landlord/templates/landlord/account.html
+++ b/landlord/templates/landlord/account.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 
+{% block title %}
+Личный кабинет
+{% endblock %}
 
 {% block content %}
 
@@ -8,25 +11,25 @@
   {% if request.user.is_authenticated %}
   <ul class="nav-links">
     <li>
-      <a href="{% url 'accounts:landlord_leaving' %}">
+      <a href="{% url 'landlord:leaving' %}">
         Выезжают: ({{ leaving|length }})
       </a>
     </li>
 
     <li>
-      <a href="{% url 'accounts:landlord_reside' %}">
+      <a href="{% url 'landlord:reside' %}">
         Проживают: ({{ reside|length }})
       </a>
     </li>
 
     <li>
-      <a href="{% url 'accounts:landlord_will_arrive_soon' %}">
+      <a href="{% url 'landlord:will_arrive_soon' %}">
         Скоро приедут: ({{ will_arrive_soon|length }})
       </a>
     </li>
 
     <li>
-      <a href="{% url 'accounts:landlord_upcoming' %}">
+      <a href="{% url 'landlord:upcoming' %}">
         Предстоящие: ({{ upcoming|length }})
       </a>
     </li>
@@ -38,16 +41,4 @@
   {% endif %}
 </nav>
 
-
-<div class="container">
-  {% for reserv in reside|dictsort:"start_date" %}
-  {{ reserv.name_reserv }}
-  <br>
-  {{ reserv.start_date }}
-  {{ reserv.end_date }}
-  <br>
-  <br>
-  {% endfor %}
-</div>
-  
 {% endblock %}
